--- a/BetterMotherFuckingWebsite.html
+++ b/BetterMotherFuckingWebsite.html
@@ -1,6 +1,20 @@
 <html>
 
 	<head>
+		<style type="text/css">
+			body {
+				margin: 40px auto ;
+				max-width: 650px ;
+				line-height: 1.6 ;
+				font-size: 18px ;
+				color: #444 ;
+				padding: 0 10px
+			}
+
+			h1,h2,h3 {
+				line-height: 1.2
+			}
+		</style>
 
 	</head>
 
@@ -18,10 +32,10 @@
 
 		<ul>
 			<li>Shit's <i>still</i> lightweight and loads fast</li>
-			<li><i>Still</i>Fits on all your shitty screens</li>
-			<li><i>Still</i>Looks the same in all you shitty browsers</li>
-			<li>The motherfucker's <i>still</i>accessible to every asshole that visits your site</li>
-			<li>Shit's <i>still</i>legible and gets your fucking point across (if you had one instead of just 5mb pics of hipsters drinking coffee)</li>
+			<li><i>Still</i> Fits on all your shitty screens</li>
+			<li><i>Still</i> Looks the same in all you shitty browsers</li>
+			<li>The motherfucker's <i>still</i> accessible to every asshole that visits your site</li>
+			<li>Shit's <i>still</i> legible and gets your fucking point across (if you had one instead of just 5mb pics of hipsters drinking coffee)</li>
 		</ul>
 
 		<h3>And guess what, motherfucker:</h3>
@@ -46,7 +60,7 @@
 
 		<p>Looking at an LCD screen is strainful enough. Don't make me read a line of text that's 200 fucking characters long. Keep it to a nice 60-80 and users might actually read more than one sentence of your worthless dribble.</p>
 
-		<h1>Yes, this <i>also</i> fucking satire, you fuck</h2>
+		<h2>Yes, this <i>also</i> fucking satire, you fuck</h2>
 
 		<p>I love what the creator of <a href="http://motherfuckingwebsite.com/">this site's inspiration</a> did. What I'm saying is that it's so, so simple to make sites easier to read. Websites are broken by default, they are functional, high-performing, and accessible, but they're also fucking ugly. You and all the other web designers out there need to make them not total shit.</p>
 
